--- a/rps/rps.html
+++ b/rps/rps.html
@@ -12,16 +12,28 @@
 		<div class = "score_bar" id = "user_bar"></div>
 		<div class = "score_bar" id = "computer_bar"></div>
 		<div class = "score_bar" id = "draw_bar"></div>
+		<div id = "win_per"></div>
+		<div id = "lose_per"></div>
+		<div id = "draw_per"></div>
 	</div>
 	<div class = "Scoreboard">
-		<span id = "user_score" class = "score">0</span>
-		<span id = "computer_score" class = "score">0</span>
-		<span id = "draw" class = "score">0</span>
+		<div class = "win_tag"> Win </div>
+		<div class = "loss_tag"> Loss </div>
+		<div class = "draw_tag"> Draw </div>
+		<div id = "user_score" class = "score">0</div>
+		<div id = "computer_score" class = "score">0</div>
+		<div id = "draw" class = "score">0</div>
 	</div>
 	<div class = "Options">
-		<div class = "Choice" id="R">Rock</div>
-		<div class = "Choice" id="P">Paper</div>
-		<div class = "Choice" id="S">Scissors</div>
+		<div class = "Choice" id="r">
+			<img src = "images/rock.png" width = "100" height = "100">
+		</div>
+		<div class = "Choice" id="p">
+			<img src = "images/paper.png" width = "100" height = "100">
+		</div>
+		<div class = "Choice" id="s">
+			<img src = "images/scissor.png" width = "100" height = "100">
+		</div>
 	</div>
 	<p id = "Message"> Please Make a Selection </p>
 	<p id = "Message2"> </p>
