--- a/rps/rps.html
+++ b/rps/rps.html
@@ -9,12 +9,12 @@
 		<h1>Rock, Paper, Scissors</h1>
 	</header>
 	<div class = "Simulation">
-		<div class = "score_bar" id = "user_bar"></div>
-		<div class = "score_bar" id = "computer_bar"></div>
-		<div class = "score_bar" id = "draw_bar"></div>
-		<div id = "win_per"></div>
-		<div id = "lose_per"></div>
-		<div id = "draw_per"></div>
+		<div class = "simelebar" id = "user_bar"></div>
+		<div class = "simelebar" id = "computer_bar"></div>
+		<div class = "simelebar" id = "draw_bar"></div>
+		<div class = "simele" id = "win_per"></div>
+		<div class = "simele" id = "lose_per"></div>
+		<div class = "simele" id = "draw_per"></div>
 	</div>
 	<div class = "Scoreboard">
 		<div class = "win_tag"> Win </div>
@@ -39,8 +39,8 @@
 	<p id = "Message2"> </p>
 	<p id = "MessageR"> </p>
 	<div class = "Options">
-		<div class = "Choice" id="Reset">Reset!</div>
-		<div class = "Choice" id="Sim">Simulate!</div>
+		<div class = "Button" id="Reset">RESET</div>
+		<div class = "Button" id="Sim">SIMULATE</div>
 	</div>
 	<script type="text/javascript" src="app.js"></script>
 </body>
